Bug 41162 - [4.5 Regression] 416.gamess in SPEC CPU 2006 failed to build
Summary: [4.5 Regression] 416.gamess in SPEC CPU 2006 failed to build
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Jerry DeLisle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-25 04:34 UTC by H.J. Lu
Modified: 2009-08-26 20:56 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-08-25 05:24:38


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-08-25 04:34:37 UTC
Revision 151049 gave:

gfortran -c -o chgpen.fppized.o    -O2 -ffast-math       -DSPEC_CPU_LP64  -ffixed-form       chgpen.fppized.f
        WRITE(IW,410) NV,NVA,NFLAT,ALPHA,BETA,GAMMA,CHISQ,
                    1
Error: FORMAT label 410 at (1) not defined
chgpen.fppized.f:2075.22:

         WRITE(IW,1240) NF,CHISQ,(XVAL(J),J=1,NV)
                      1
Error: FORMAT label 1240 at (1) not defined
specmake[3]: *** [chgpen.fppized.o] Error 1

Revision 151042 is OK. It may be caused by:

http://gcc.gnu.org/ml/gcc-cvs/2009-08/msg00725.html
http://gcc.gnu.org/ml/gcc-cvs/2009-08/msg00727.html
Comment 1 H.J. Lu 2009-08-25 04:40:10 UTC
The complete error is

chgpen.fppized.f:2107.56:

     *       1X,'INITIAL VALUE OF CHISQ =',1P,E17.10,0P/
                                                        1
Error: Comma required after P descriptor in format string at (1)
chgpen.fppized.f:2111.57:

     *       1X,'ENDING VALUE OF CHISQ   =',1P,E17.10,0P/
                                                         1
Error: Comma required after P descriptor in format string at (1)
chgpen.fppized.f:1884.20:

        WRITE(IW,410) NV,NVA,NFLAT,ALPHA,BETA,GAMMA,CHISQ,
                    1
Error: FORMAT label 410 at (1) not defined
chgpen.fppized.f:2075.22:

         WRITE(IW,1240) NF,CHISQ,(XVAL(J),J=1,NV)
                      1
Error: FORMAT label 1240 at (1) not defined
Comment 2 Andrew Pinski 2009-08-25 04:45:25 UTC
This is most likely a dup of bug 41154.
Comment 3 Jerry DeLisle 2009-08-25 04:57:25 UTC
Its a DUP, but a different case I also did not think of.  The P descriptor requires special casing and that is what is getting us here.

I will commit a fix shortly.
Comment 4 Jerry DeLisle 2009-08-25 05:22:34 UTC
Subject: Bug 41162

Author: jvdelisle
Date: Tue Aug 25 05:22:14 2009
New Revision: 151074

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=151074
Log:
2009-08-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/41162
	* io.c (check_format): Fix to not error on slash after P. Fix some
	error loci.

Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/io.c

Comment 5 Jerry DeLisle 2009-08-25 05:24:38 UTC
Fixed. I will leave this open for a bit.  At the rate I am going I will break everything by midnight. (zzz)
Comment 6 Jerry DeLisle 2009-08-26 03:20:51 UTC
No bad news for a day, closing
Comment 7 H.J. Lu 2009-08-26 03:33:44 UTC
Please add a testcase before closing.  Thanks.
Comment 8 hjl@gcc.gnu.org 2009-08-26 20:55:56 UTC
Subject: Bug 41162

Author: hjl
Date: Wed Aug 26 20:55:42 2009
New Revision: 151130

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=151130
Log:
2009-08-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR fortran/41162
	* gfortran.dg/pr41162.f: New.

Added:
    trunk/gcc/testsuite/gfortran.dg/pr41162.f
Modified:
    trunk/gcc/testsuite/ChangeLog

Comment 9 H.J. Lu 2009-08-26 20:56:23 UTC
Fixed.
Comment 10 hjl@gcc.gnu.org 2009-08-30 02:07:06 UTC
Subject: Bug 41162

Author: hjl
Date: Sun Aug 30 02:06:32 2009
New Revision: 151218

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=151218
Log:
2009-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-08-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR fortran/41162
	* gfortran.dg/pr41162.f: New.

	2009-08-26  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41163
	* gcc.c-torture/compile/pr41163.c: New testcase.

	2009-08-25  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41139
	* gfortran.dg/proc_ptr_25.f90: New.
	* gfortran.dg/proc_ptr_comp_18.f90: New.
	* gfortran.dg/proc_ptr_comp_19.f90: New.

	2009-08-20  Michael Matz  <matz@suse.de>

	PR fortran/41126
	* gfortran.dg/pr41126.f90: New test.

	2009-08-20  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41121
	* gfortran.dg/intrinsic_5.f90: New.

	2009-08-19  Jason Merrill  <jason@redhat.com>

	PR c++/41120
	* g++.dg/other/gc4.C: New.

Added:
    branches/gcc-4_4-branch/gcc/testsuite/g++.dg/other/gc4.C
      - copied unchanged from r151217, trunk/gcc/testsuite/g++.dg/other/gc4.C
    branches/gcc-4_4-branch/gcc/testsuite/gcc.c-torture/compile/pr41163.c
      - copied unchanged from r151217, trunk/gcc/testsuite/gcc.c-torture/compile/pr41163.c
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/intrinsic_5.f90
      - copied unchanged from r151217, trunk/gcc/testsuite/gfortran.dg/intrinsic_5.f90
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/pr41126.f90
      - copied unchanged from r151217, trunk/gcc/testsuite/gfortran.dg/pr41126.f90
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/pr41162.f
      - copied unchanged from r151216, trunk/gcc/testsuite/gfortran.dg/pr41162.f
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/proc_ptr_25.f90
      - copied unchanged from r151217, trunk/gcc/testsuite/gfortran.dg/proc_ptr_25.f90
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/proc_ptr_comp_18.f90
      - copied unchanged from r151217, trunk/gcc/testsuite/gfortran.dg/proc_ptr_comp_18.f90
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/proc_ptr_comp_19.f90
      - copied unchanged from r151217, trunk/gcc/testsuite/gfortran.dg/proc_ptr_comp_19.f90
Modified:
    branches/gcc-4_4-branch/gcc/testsuite/ChangeLog