2009-08-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR fortran/41162
	* io.c (check_format): Fix to not error on slash after P. Fix some
	error loci.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@151074 138bc75d-0d04-0410-961f-82ee72b054a4